--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- CSS LINK -->
     <link rel="stylesheet" href="style.css">
     <!-- icon -->
-    <link rel="icon" href="image/K restaurant Logo.jpeg" />
+    <link rel="icon" href="https://pin.it/3KxVuzSw0" />
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>La Ciiri's | Home</title>
