--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- CSS LINK -->
     <link rel="stylesheet" href="style.css">
     <!-- icon -->
-    <link rel="icon" href="https://www.shutterstock.com/shutterstock/photos/2140640661/display_1500/stock-vector-restaurant-logo-on-letter-k-with-chef-hat-spoon-and-fork-symbol-for-kitchen-sign-cafe-icon-2140640661.jpg" />
+    <link rel="icon" href="image/K restaurant Logo.jpeg" />
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>La Ciiri's | Home</title>
